workspace = { members = ["example"] }
[package]
name = "envro"
version = "0.2.0"
edition = "2021"
description = "A crate to load environment variables from a .env file into the process environment variables"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.57"
